--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -992,10 +992,6 @@ button:hover,
   right: -35px !important;
 }
 
-.-right-2 {
-  right: -20px;
-}
-
 .-top-\[65px\] {
   top: -65px;
 }
@@ -1008,20 +1004,8 @@ button:hover,
   bottom: 10px;
 }
 
-.bottom-\[-105px\] {
-  bottom: -105px;
-}
-
-.bottom-\[-85px\] {
-  bottom: -85px;
-}
-
 .left-0 {
   left: 0px;
-}
-
-.left-\[-65px\] {
-  left: -65px;
 }
 
 .left-\[20px\] {
@@ -1054,14 +1038,6 @@ button:hover,
 
 .top-8 {
   top: 80px;
-}
-
-.top-\[-145px\] {
-  top: -145px;
-}
-
-.top-\[-75px\] {
-  top: -75px;
 }
 
 .top-\[25px\] {
@@ -1488,10 +1464,6 @@ button:hover,
 
 .max-w-\[1520px\] {
   max-width: 1520px;
-}
-
-.max-w-\[170px\] {
-  max-width: 170px;
 }
 
 .max-w-\[200px\] {
@@ -2126,6 +2098,10 @@ button:hover,
   padding-top: 56.25%;
 }
 
+.pb-0 {
+  padding-bottom: 0px;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2274,6 +2250,11 @@ button:hover,
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-darkPurple {
+  --tw-text-opacity: 1;
+  color: rgb(77 63 154 / var(--tw-text-opacity, 1));
 }
 
 .underline {
@@ -2831,10 +2812,6 @@ button:hover,
     justify-content: flex-start;
   }
 
-  .lg\:justify-between {
-    justify-content: space-between;
-  }
-
   .lg\:justify-items-start {
     justify-items: start;
   }
@@ -2851,16 +2828,16 @@ button:hover,
     gap: 50px;
   }
 
+  .lg\:gap-7 {
+    gap: 70px;
+  }
+
   .lg\:gap-\[120px\] {
     gap: 120px;
   }
 
   .lg\:gap-\[50px\] {
     gap: 50px;
-  }
-
-  .lg\:gap-7 {
-    gap: 70px;
   }
 
   .lg\:rounded {
@@ -2959,10 +2936,6 @@ button:hover,
 @media (min-width: 1280px) {
   .xl\:col-span-1 {
     grid-column: span 1 / span 1;
-  }
-
-  .xl\:block {
-    display: block;
   }
 
   .xl\:flex {
