Create Pages Navigation Component

--- a/templates/home.html
+++ b/templates/home.html
@@ -691,5 +691,9 @@
 			}
 	  %}
 
+    {% include_dnd_partial
+	    path='../sections/pages-navigation-cards.html',
+	  %}
+
 	{% end_dnd_area %}
 {% endblock body %}
