--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -1348,6 +1348,10 @@ button:hover,
   height: 100vh;
 }
 
+.\!h-auto {
+  height: auto !important;
+}
+
 .max-h-\[200px\] {
   max-height: 200px;
 }
@@ -1490,6 +1494,10 @@ button:hover,
   max-width: 36rem;
 }
 
+.max-w-\[345px\] {
+  max-width: 345px;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1608,6 +1616,10 @@ button:hover,
 
 .items-baseline {
   align-items: baseline;
+}
+
+.items-stretch {
+  align-items: stretch;
 }
 
 .justify-end {
@@ -1889,6 +1901,10 @@ button:hover,
   background-repeat: no-repeat;
 }
 
+.fill-grey {
+  fill: #373738;
+}
+
 .stroke-white {
   stroke: #fff;
 }
@@ -1926,6 +1942,10 @@ button:hover,
 
 .p-4 {
   padding: 40px;
+}
+
+.\!p-4 {
+  padding: 40px !important;
 }
 
 .px-1 {
@@ -2018,6 +2038,15 @@ button:hover,
   padding-bottom: 8px;
 }
 
+.\!px-4 {
+  padding-left: 40px !important;
+  padding-right: 40px !important;
+}
+
+.pb-0 {
+  padding-bottom: 0px;
+}
+
 .pb-1 {
   padding-bottom: 10px;
 }
@@ -2096,10 +2125,6 @@ button:hover,
 
 .pt-\[56\.25\%\] {
   padding-top: 56.25%;
-}
-
-.pb-0 {
-  padding-bottom: 0px;
 }
 
 .text-left {
@@ -2242,6 +2267,11 @@ button:hover,
   color: rgb(15 22 28 / var(--tw-text-opacity, 1));
 }
 
+.text-darkPurple {
+  --tw-text-opacity: 1;
+  color: rgb(77 63 154 / var(--tw-text-opacity, 1));
+}
+
 .text-grey {
   --tw-text-opacity: 1;
   color: rgb(55 55 56 / var(--tw-text-opacity, 1));
@@ -2250,11 +2280,6 @@ button:hover,
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-darkPurple {
-  --tw-text-opacity: 1;
-  color: rgb(77 63 154 / var(--tw-text-opacity, 1));
 }
 
 .underline {
@@ -2284,6 +2309,24 @@ button:hover,
 .shadow-none {
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2458,6 +2501,11 @@ button:hover,
   color: rgb(110 67 255 / var(--tw-text-opacity, 1));
 }
 
+.hover\:text-darkPurple:hover {
+  --tw-text-opacity: 1;
+  color: rgb(77 63 154 / var(--tw-text-opacity, 1));
+}
+
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
@@ -2492,6 +2540,10 @@ button:hover,
 
 .group:hover .group-hover\:bg-pink\/\[\.85\] {
   background-color: rgb(215 180 243 / .85);
+}
+
+.group:hover .group-hover\:fill-darkPurple {
+  fill: #4d3f9a;
 }
 
 @media (min-width: 640px) {
@@ -2549,10 +2601,6 @@ button:hover,
 
   .sm\:gap-3 {
     gap: 30px;
-  }
-
-  .sm\:justify-self-center {
-    justify-self: center;
   }
 
   .sm\:p-3 {
