--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -1246,6 +1246,10 @@ button:hover,
   display: block;
 }
 
+.\!block {
+  display: block !important;
+}
+
 .\!flex {
   display: flex !important;
 }
@@ -2565,6 +2569,18 @@ button:hover,
 
   .sm\:mt-2 {
     margin-top: 20px;
+  }
+
+  .sm\:grid {
+    display: grid;
+  }
+
+  .sm\:hidden {
+    display: none;
+  }
+
+  .sm\:\!hidden {
+    display: none !important;
   }
 
   .sm\:h-\[250px\] {
