--- a/templates/home.html
+++ b/templates/home.html
@@ -431,10 +431,19 @@
           {% dnd_module
             path='@hubspot/rich_text',
             html='
-              <h2 class="h3 bazenske-kupole">Oprema i održavanje bazena i wellness centara</h2>
-              <p>
-                2-3 rečenice teksta o opremi za bazene sa rečenicom koja pominje kompletnu ponudu opreme za bazene i ima upadljivi link ka šopu.
+              <div class="flex flex-col items-center">
+                <h2 class="h3 bazenske-kupole w-full">Oprema i održavanje bazena i wellness centara</h2>
+              <p class="text-justify	">
+                U našoj ponudi je celokupan asortiman opreme za bazene, kao što filtracioni sistemi, uređaji za
+održavanje kvaliteta vode, oprema za grejanje i tretman vode, elektrokomandni ormani, uređaji za
+automatsku regulaciju nivoa vode, oprema za čišćenje i još mnogo toga, što spada u standardnu ili
+specifičnu opremu. Pored bazenske opreme nudimo i opremu za različite sadržaje u spa i wellness
+centrima kao što su sve vrste sauna, spa kade, parna kupatila, slane sobe i tako dalje.
               </p>
+              <p class="text-justify">Naš tehnički tim čini profesionalci sa mnogo godina iskustva u montaži, održavanju i servisu.
+Angažovanjem naše firme obezbeđujete pouzdanog izvođača koji pruža kvalitetnu i efikasnu uslugu.</p>
+            <a href="/bazeni/oprema" class="button flex mt-1">Saznajte više</a>
+              </div>
             '
           %}
           {% end_dnd_module %}
