--- a/modules/blog-listings.module/module.css
+++ b/modules/blog-listings.module/module.css
@@ -1,7 +1,7 @@
-.blog-author-heading,
+/* .blog-author-heading,
 .blog-tag-heading {
   padding: 0 1rem;
-}
+} */
 
 .blog-index {
   display: flex;
