--- a/templates/blog-index.html
+++ b/templates/blog-index.html
@@ -1,7 +1,7 @@
 <!--
   templateType: blog_listing
   isAvailableForNewContent: true
-  label: Tech in Motion - blog listing
+  label: A&T Sistem - blog listing
   screenshotPath: ../images/template-previews/blog-index.jpg
 -->
 {% set template_css = '../../css/templates/blog.css' %}
@@ -19,6 +19,7 @@
     path='../sections/header-2.html',
     context = {
       'title': '<h1>Blog</h1>',
+      'custom_section_classes': 'pt-[130px]'
     }
   %}
 
@@ -48,13 +49,20 @@
 
   {# Blog listings and pagination #}
 
-  {% dnd_section class="py-8 px-4" %}
+  {% dnd_section class="py-4 px-4" %}
     {% dnd_column offset=0, width=12 %}
       {% dnd_row offset=0, width=12 %}
         {% dnd_module path='../modules/blog-listings' %}{% end_dnd_module %}
       {% end_dnd_row %}
       {% dnd_row offset=0, width=12 %}
-        {% dnd_module path='../modules/blog-pagination' %}{% end_dnd_module %}
+        {% dnd_module 
+          path='../modules/blog-pagination',
+          previous_label='Prethodna',
+          next_label='Sledeća',
+          first_label='Prva',
+          last_label='Poslednja'
+        %}
+      {% end_dnd_module %}
       {% end_dnd_row %}
     {% end_dnd_column %}
   {% end_dnd_section %}
